--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - MOE Sexuality Education in Schools.md
       - Subject Sharing 2023.md
       - Useful Links for students.md
       - Rivervale in the News.md
