--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,5 +7,6 @@ collections:
       - General Information.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/EAS.md
       - Our Staff/.keep
       - Our Staff.md
