--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - General Information.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/Mother Tongue Teachers.md
       - Our Staff/PE ART MUSIC Teachers.md
       - Our Staff/EAS.md
       - Our Staff/.keep
