--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - General Information.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/Executive Committee.md
       - Our Staff/Pri 1 Teachers.md
       - Our Staff/Pri 2 Teachers.md
       - Our Staff/Pri 3 Teachers.md
