--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,7 +2,7 @@ collections:
   about-us:
     output: true
     order:
-      - Mission&Vision.md
+      - Vision & Mission.md
       - School Song.md
       - General Information.md
       - Our Location.md
