--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Advertisements.md
       - Teacher's Portal.md
       - Useful Links for students.md
       - Rivervale in the News.md
