{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1921"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Advertisements.md
       - Teacher's Portal.md
-      - Useful Links for students.md
+      - Useful Links for Students.md
       - Rivervale in the News.md
       - School Calendar.md
       - Rivervale Connects.md
