{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"40"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Information for parents/.keep
       - Teacher's Portal.md
       - Useful Links for Students.md
       - Rivervale in the News.md
