--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Information for parents/Parents Gateway.md
       - Information for parents/.keep
       - Teacher's Portal.md
       - Useful Links for Students.md
