--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rivervale Primary School
-url: ""
+url: https://www.rivervalepri.moe.edu.sg
 favicon: /images/School/photo6167760560079352290.jpg
 colors:
   primary-color: "#b6ab31"
@@ -56,3 +56,4 @@ is_government: false
 facebook-pixel: ""
 google_analytics: ""
 linkedin-insights: ""
+google_analytics_ga4: ""
