{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"2276"}

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Rivervale Primary School
 url: https://www.rivervalepri.moe.edu.sg
 favicon: /images/School/photo6167760560079352290.jpg
 colors:
-  primary-color: "#b6ab31"
-  secondary-color: "#4372d6"
+  primary-color: "#4a90e2"
+  secondary-color: "#43cdd6"
   media-colors:
     - title: media-color-one
       color: "#49759a"
