--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Information for parents/2023 P1 Admin Briefing.md
       - Information for parents/Subject Sharing 2023.md
       - Information for parents/Parent Engagement 2023.md
       - Information for parents/Consent for photography and videos.md
