--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Information for Parents/Rivervale Connects.md
       - Information for Parents/.keep
       - Information for Parents/School Calendar.md
       - Information for Parents/Parents Gateway.md
