{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2276"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Information for Students/.keep
       - Information for Parents/.keep
       - Information for Parents/Rivervale Connects.md
       - Information for Parents/School Calendar.md
