--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Information for Students/Guide to using SLS & Student ICON.md
       - Information for Students/Useful Links for Students.md
       - Information for Students/.keep
+      - Information for Parents/Primary One 2022 information.md
       - Information for Parents/.keep
       - Information for Parents/Rivervale Connects.md
       - Information for Parents/School Calendar.md
