{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1921"}

--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -10,6 +10,7 @@ collections:
       - Sports/Hockey.md
       - Sports/Netball.md
       - Sports/Taekwondo.md
+      - Performing Arts/International Dance.md
       - Performing Arts/.keep
       - Performing Arts/Brass Band.md
       - Performing Arts/Chinese Dance.md
