{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1921"}

--- a/_partnerships/collection.yml
+++ b/_partnerships/collection.yml
@@ -2,6 +2,7 @@ collections:
   partnerships:
     output: true
     order:
+      - Parent Volunteer.md
       - Parent Support Group.md
       - Our Alumni.md
       - Parents in Education.md
