{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1921"}

--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -20,6 +20,7 @@ collections:
       - Performing Arts/Fusion Dance.md
       - Performing Arts/Indian Dance.md
       - Performing Arts/Malay Dance.md
+      - Clubs/Mass Communication.md
       - Clubs/.keep
       - Clubs/Art Club.md
       - Clubs/Ceramics Club.md
