--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -20,6 +20,7 @@ collections:
       - Performing Arts/Fusion Dance.md
       - Performing Arts/Indian Dance.md
       - Performing Arts/Malay Dance.md
+      - Clubs/Media Club.md
       - Clubs/.keep
       - Clubs/Art Club.md
       - Clubs/Life Skills Club.md
