{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2276"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -19,4 +19,4 @@ collections:
       - Information for Parents/Primary One 2022 information.md
       - Teacher's Portal.md
       - Staff Accolades.md
-      - Advertisements.md
+      - School Bus Service.md
