{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1921"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -17,5 +17,5 @@ collections:
       - Our Staff/Pri 6 Teachers.md
       - Our Staff/Mother Tongue Teachers.md
       - Our Staff/PE ART MUSIC Teachers.md
-      - Our Staff/EAS.md
+      - Our Staff/Executive & Administration Staff.md
       - Our Staff/.keep
