--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -7,6 +7,7 @@ collections:
       - General Information.md
       - Our Location.md
       - Our Service Providers.md
+      - Our Staff/Counsellors and SEN Officers.md
       - Our Staff/.keep
       - Our Staff/School Advisory Committee.md
       - Our Staff/Executive Committee.md
