{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"1921"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -19,4 +19,4 @@ collections:
       - Our Staff/Mother Tongue Teachers.md
       - Our Staff/PE ART MUSIC Teachers.md
       - Our Staff/Executive & Administration Staff.md
-      - Our Staff/Counsellors and SEN Officers.md
+      - Our Staff/Counsellors & SEN Officers.md
