--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - MOE Sexuality Education in Schools.md
       - Departments.md
       - Aesthetics (Art & Music).md
       - English.md
