--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Information for Students/.keep
       - Information for Students/Useful Links for Students.md
       - Information for Students/Guide to using SLS & Student ICON.md
+      - Information for Parents/Briefing Slide.md
       - Information for Parents/General Information.md
       - Information for Parents/P1 2024 Intake.md
       - Information for Parents/.keep
