{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2276"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,8 +2,8 @@ collections:
   departments:
     output: true
     order:
-      - MOE Sexuality Education/Character and Citizenship Education.md
-      - MOE Sexuality Education/.keep
+      - CCE/Character and Citizenship Education.md
+      - CCE/.keep
       - Departments.md
       - Aesthetics (Art & Music).md
       - English.md
