--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - CCE/.keep
       - Character and Citizenship Education.md
       - Departments.md
       - Aesthetics (Art & Music).md
