--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Service Providers/Our Service Providers.md
       - Service Providers/.keep
       - Vision & Mission.md
       - School Song.md
