--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -5,6 +5,7 @@ collections:
       - Vision & Mission.md
       - School Song.md
       - General Information.md
+      - Service Providers/School Uniform Supplier.md
       - Service Providers/School Bookshop.md
       - Service Providers/.keep
       - Service Providers/Our Service Providers.md
