{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"2276"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -5,13 +5,13 @@ collections:
       - Vision & Mission.md
       - School Song.md
       - General Information.md
-      - Service Providers/.keep
-      - Service Providers/School Bus Service.md
-      - Service Providers/School Bookshop.md
-      - Service Providers/School Uniform Supplier.md
-      - Service Providers/School Dental Clinic.md
-      - Service Providers/Student Care Centre.md
-      - Service Providers/Our Service Providers.md
+      - Our Service Providers/.keep
+      - Our Service Providers/School Bus Service.md
+      - Our Service Providers/School Bookshop.md
+      - Our Service Providers/School Uniform Supplier.md
+      - Our Service Providers/School Dental Clinic.md
+      - Our Service Providers/Student Care Centre.md
+      - Our Service Providers/Our Service Providers.md
       - Our Location.md
       - Our Staff/.keep
       - Our Staff/School Advisory Committee.md
