--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -10,6 +10,6 @@ collections:
       - Information for Parents/P1 2024 Intake.md
       - Information for Parents/Forms and Links.md
       - Information for Parents/School Calendar.md
-      - Information for Parents/Briefing Slide.md
+      - Information for Parents/Briefing Slides.md
       - Teacher's Portal.md
       - Staff Accolades.md
