{"message":"Update file: collection.yml","userId":"57903","fileName":"collection.yml"}

--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -18,7 +18,7 @@ collections:
       - Clubs/.keep
       - Clubs/Art Club.md
       - Clubs/Life Skills Club.md
-      - Clubs/Mass Communication.md
+      - Clubs/Drama.md
       - Clubs/Media Club.md
       - Clubs/Robotics Club.md
       - Uniformed Groups/.keep
