--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Teachers' Portal/Staff Accolades.md
       - Teachers' Portal/.keep
       - Information for Students/.keep
       - Information for Students/Useful Links for Students.md
