{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -4,9 +4,9 @@ collections:
     order:
       - Teachers' Portal/Staff Accolades.md
       - Teachers' Portal/.keep
-      - Information for Students/.keep
-      - Information for Students/Useful Links for Students.md
-      - Information for Students/Guide to using SLS & Student ICON.md
+      - Students' Portal/.keep
+      - Students' Portal/Useful Links for Students.md
+      - Students' Portal/Guide to using SLS & Student ICON.md
       - Information for Parents/P1 2026 Intake.md
       - Information for Parents/.keep
       - Information for Parents/General Information.md
