{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -7,9 +7,9 @@ collections:
       - Students' Portal/.keep
       - Students' Portal/Useful Links for Students.md
       - Students' Portal/Guide to using SLS & Student ICON.md
-      - Information for Parents/P1 2026 Intake.md
-      - Information for Parents/.keep
-      - Information for Parents/General Information.md
-      - Information for Parents/Forms and Links.md
-      - Information for Parents/School Calendar.md
-      - Information for Parents/Briefing Slides.md
+      - Parents' Portal/P1 2026 Intake.md
+      - Parents' Portal/.keep
+      - Parents' Portal/General Information.md
+      - Parents' Portal/Forms and Links.md
+      - Parents' Portal/School Calendar.md
+      - Parents' Portal/Briefing Slides.md
