{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Teachers' Portal/.keep
+      - Students' Portal/Guide to using SLS & Student ICON.md
       - Students' Portal/Useful Links for Students.md
       - Students' Portal/.keep
       - Parents' Portal/.keep
