{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Students' Portal/Guide to using SLS & Student ICON.md
       - Students' Portal/Useful Links for Students.md
       - Students' Portal/.keep
+      - Parents' Portal/General Information.md
       - Parents' Portal/School Calendar.md
       - Parents' Portal/Forms and Links.md
       - Parents' Portal/P1 2026 Intake.md
