{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_communications/collection.yml
+++ b/_communications/collection.yml
@@ -2,6 +2,7 @@ collections:
   communications:
     output: true
     order:
+      - Teachers' Portal/Teachers' Portal.md
       - Teachers' Portal/.keep
       - Students' Portal/Guide to using SLS & Student ICON.md
       - Students' Portal/Useful Links for Students.md
