{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Acceptable Use Policy.md
       - Vision & Mission.md
       - School Song.md
       - General Information.md
