{"message":"Update file: navigation.yml","userId":"57903","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,5 @@ links:
     collection: partnerships
   - title: Programmes & Events
     collection: programme-and-events
+  - title: MK@Rivervale
+    collection: kindergarten
