--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,3 +12,5 @@ links:
     collection: programme-and-events
   - title: MK@Rivervale
     collection: kindergarten
+  - title: Communications
+    collection: communications
