{"message":"Update file: collection.yml","userId":"57900","fileName":"collection.yml"}

--- a/_kindergarten/collection.yml
+++ b/_kindergarten/collection.yml
@@ -2,5 +2,6 @@ collections:
   kindergarten:
     output: true
     order:
+      - Open House.md
       - MK@Rivervale.md
       - Other information.md
